--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/foundation.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/foundation.min.css" rel="stylesheet" type="text/css">
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="app">
@@ -12,5 +13,10 @@
       <p>Checkout your developer console.</p>
     </div>
     <script src="js/compiled/super_omnia.js" type="text/javascript"></script>
+    <script>
+        window.onload = function () {
+            super_omnia.core.main();
+        }
+    </script>
   </body>
 </html>
